# devDiary

./: .gitignore  README.md  alembic.ini  pyproject.toml
.codebuddy/memory/: 2026-03-09.md
.codebuddy/plans/: DevDiary-MVP_8f18445a.md
.codebuddy/teams/devdiary-v03/: config.json
.codebuddy/teams/devdiary-v03/inboxes/: backend-dev.json  frontend-dev.json  team-lead.json  tester.json
alembic/: env.py
alembic/versions/: 001_initial.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: AppLayout.vue  DiaryCard.vue  GenerateDialog.vue  MarkdownViewer.vue  StatsChart.vue
frontend/src/composables/: useApi.ts
frontend/src/router/: index.ts
frontend/src/stores/: diary.ts  project.ts
frontend/src/types/: index.ts
frontend/src/views/: AnnualReportView.vue  DiaryDetailView.vue  DiaryListView.vue  HomeView.vue  ProjectsView.vue  SettingsView.vue  StatsView.vue  WatcherView.vue
src/devdiary/: __init__.py  config.py  database.py  models.py  watcher.py
src/devdiary/analyzer/: __init__.py  stats_analyzer.py
src/devdiary/api/: __init__.py  app.py  schemas.py
src/devdiary/api/routes/: diaries.py  projects.py  report.py  settings.py  stats.py  watcher.py
src/devdiary/cli/: __init__.py  main.py
src/devdiary/generator/: __init__.py  ai_provider.py  content_generator.py
src/devdiary/generator/prompts/: blog.txt  diary.txt  report.txt
src/devdiary/generator/providers/: __init__.py  deepseek_provider.py  gongfeng_provider.py  openai_provider.py  zhipu_provider.py
src/devdiary/renderer/: __init__.py  html_renderer.py  markdown_renderer.py
src/devdiary/scanner/: __init__.py  git_scanner.py  tech_detector.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_generator.py  test_renderer.py  test_scanner.py
(+1 files in other folders)
